2006-12-13  Petr Ovtchenkov  <ptr@island.corbina.net>

	* thr_mgr.h, thr_mgr.cc: add join method.

2006-11-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc: added xmt::getpid() and xmt:getppid(); ::getpid()
	really return cached value, so returned pid may be parent's pid
	really. I use syscall here and rewrite appropriate var during
	Thread::fork().

	* uid.h, uid.cc: code reorganization to avoid problems with order
	of static objects dtors calls and libraries unload order.

	* libxmt: version 1.9.3

2006-11-23  Petr Ovtchenkov  <ptr@island.corbina.net>

	* uid.h, uid.cc: return hostid on Linux

	* libxmt: version 1.9.2

2006-10-31  Petr Ovtchenkov  <ptr@island.corbina.net>

	* time.cc: add useful includes, detected when compile
	without STLport.

2006-10-24  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc, time.h, time.cc: move timespec functions to
	time.cc; move sleep-like functions from Thread to xmt namespace
	in time.cc.

2006-10-10  Petr Ovtchenkov  <ptr@island.corbina.net>

	* thr_mgr.cc: don't kill not finished threads in ThreadMgr's
	dtor, this lead to whole process termination [I should
	investigate why].

2006-09-22  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.cc: no need to lock around thread creation;
	_state should be setup in goodbit in parent thread,
	not in just created [info in parent, and it should
	be joinable].

	* thr_mgr.h, thr_mgr.cc: reincarnation of threads pool;
	don't reuse allocated Thread space---Thread flags may differ
	in the future.

	* libxmt: version 1.9.1

2006-09-18  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc: add stack size attribute to thread creation
	in POSIX model; [if we create many threads with default stack
	size in Linux, we quick exhaust process' virtual address space;
	this has releation to nptl model].
	
	* libxmt: version 1.9.0, significant changes

2006-08-18  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc: use locker in the fork(), instead of body of